--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,7 @@ name: CI
 on:
   push:
     branches: [main]
+    tags: ['v*']
 
   # To run this manually.
   workflow_dispatch:
@@ -36,3 +37,21 @@ jobs:
           name: site
           path: site.tar.gz
           retention-days: 14
+
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: build
+    if:  github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+
+    steps:
+    - name: Download archives
+      uses: actions/download-artifact@v3
+      with:
+        name: site
+
+    - name: Publish Release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: 'site.tar.gz'
+        token: ${{ secrets.GITHUB_TOKEN }}
