--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,24 +26,37 @@ jobs:
           bundler-cache: true
 
       - name: Build
-        run: |
-          make site
-          tar -cvf site.tar -C _site .
-          gzip site.tar
+        run: make site
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v2
         with:
           name: site
-          path: site.tar.gz
           retention-days: 14
+
+  gh-pages:
+    name: Upload to GitHub Pages
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.output.page_url }}
+
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
+        with:
+          artifact_name: site
 
   release:
     name: Release
     runs-on: ubuntu-latest
     needs: build
     if:  github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
-
     permissions:
       contents: write
 
@@ -52,9 +65,10 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: site
+        path: _site
 
     - name: Publish Release
       uses: softprops/action-gh-release@v1
       with:
-        files: 'site.tar.gz'
+        files: _site/*
         token: ${{ secrets.GITHUB_TOKEN }}
